<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        app:columnCount="4"
        app:rowCount="5">

        <Button
            android:id="@+id/genbun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickGenbun"
            android:text="@string/genbun" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickKoten"
            android:text="@string/koten" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSuu1"
            android:text="@string/suu1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSuuA"
            android:text="@string/suuA" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickEihyou1"
            android:text="@string/eihyou1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickKomyuei1"
            android:text="@string/komyuei1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickTiri"
            android:text="@string/tiri" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSeibutu"
            android:text="@string/seibutu" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickKagaku"
            android:text="@string/kagaku" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickNihonsi"
            android:text="@string/nihonsi" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickTaiiku"
            android:text="@string/taiiku" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickHoken"
            android:text="@string/hoken" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSyakaitozyouhou"
            android:text="@string/syakaitozyouhou" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickOnbisyo"
            android:text="@string/onbisyo" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickSougou"
            android:text="@string/sougou" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickHr"
            android:text="@string/hr" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickDelete"
        android:text="@string/delete" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickBack"
        android:text="@string/back" />

</LinearLayout>
